samples/out2.txt

--------------------------Compiling--------------------------
Compilation successful

-------------------Generating Class Files-------------------
Generated: Fptr.class
Generated: List.class
Main.j:45: Warning - Syntax error.

^
Main.j:185: Warning - Syntax error.

^
Main.j:186: JAS Error: Missing arguments for instruction invokevirtual.
		l
		 ^
Main.j: Found 3 errors

---------------------------Output---------------------------
Error: Could not find or load main class Main
Caused by: java.lang.ClassNotFoundException: Main
